--- a/01_DataPreprocessingTemplate.ipynb
+++ b/01_DataPreprocessingTemplate.ipynb
@@ -38,6 +38,92 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V8vYXIMfiWrF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Import the dataset\n",
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/MachineLearning_A-Z/master/Data.csv')\n",
+        "X = dataset.iloc[:,:-1].values\n",
+        "y = dataset.iloc[:,3].values"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yzMksmIwi18t",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Taking care of missing data\n",
+        "#from sklearn.preprocessing import Imputer\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "imputer = SimpleImputer(missing_values = np.nan,strategy = \"mean\")\n",
+        "imputer = imputer.fit(X[:,1:3])\n",
+        "X[:,1:3] = imputer.transform(X[:,1:3])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FrDu0hT-loPO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Encoding Categorical data\n",
+        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+        "labelencoder_X = LabelEncoder()\n",
+        "X[:,0] = labelencoder_X.fit_transform(X[:,0])\n",
+        "onehotencoder = OneHotEncoder(categorical_features = [0])\n",
+        "X = onehotencoder.fit_transform(X).toarray()\n",
+        "labelencoder_y = LabelEncoder()\n",
+        "y = labelencoder_y.fit_transform(y)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "68K_fWI5odvs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Spliting the dataset into the Training Set and Test Set\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state = 0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sLm_lbMZplok",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Feature Scaling\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "sc_X = StandardScaler()\n",
+        "X_train = sc_X.fit_transform(X_train)\n",
+        "X_test = sc_X.transform(X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
