--- a/03_Multiple_Linear_Regression.ipynb
+++ b/03_Multiple_Linear_Regression.ipynb
@@ -59,11 +59,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "kHJrOfXnKYjr",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Multiple Linear Regression**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "2bdtBlH0CkyB",
         "colab_type": "text"
       },
       "source": [
-        "##**Step 1: Data Processing**"
+        "###**Step 1: Data Processing**"
       ]
     },
     {
@@ -105,11 +115,11 @@
       "metadata": {
         "id": "aBMif7CaDGeK",
         "colab_type": "code",
+        "outputId": "35eb1b58-732c-4c07-9b57-882a5ed75f6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
-        },
-        "outputId": "3c7d434a-e849-425f-c9e4-e93e8d385b6f"
+        }
       },
       "source": [
         "#Encoding categorical data\n",
@@ -121,7 +131,7 @@
         "X = onehotencoder.fit_transform(X).toarray()\n",
         "#print(X)"
       ],
-      "execution_count": 22,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,17 +178,218 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7E8QTFnbKSmO",
+        "colab_type": "text"
+      },
+      "source": [
+        "###**Step 2: Fitting Simple Linear Regression to the Training Set**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "RAZJ4NYaEK7c",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "40138b41-fc84-45f3-cb17-f209770d6d33"
+      },
+      "source": [
+        "#Fitting Multiple Linear Regression to the Training Sset\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "regressor = LinearRegression()\n",
+        "regressor.fit(X_train,y_train)"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZcMJX-tIKiDp",
+        "colab_type": "text"
+      },
+      "source": [
+        "###**Step 3: Predicting the Test Set results**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y_NBzfYCIc60",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "# Predicting the Test Results\n",
+        "y_pred = regressor.predict(X_test)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C1RE5lUPKlO6",
+        "colab_type": "text"
+      },
+      "source": [
+        "###**Step 4: Optimal Model using Backward Elimination**\n",
+        "\n",
+        "[Backward Elimination](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/10_BackwardElimination.PNG)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2v0u5217J6yU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 478
+        },
+        "outputId": "57370ed0-d177-4476-eb4f-54cc3dac6ef8"
+      },
+      "source": [
+        "#Building the optimal code using Backward Elimination\n",
+        "import statsmodels.api as sm\n",
+        "X = np.append(arr = np.ones((50,1)).astype(int), values = X, axis = 1)\n",
+        "X_opt = X[:, [0, 1, 2, 3, 4, 5]]\n",
+        "regressor_OLS = sm.OLS(endog = y,exog = X_opt).fit()\n",
+        "regressor_OLS.summary()\n",
+        "X_opt = X[:, [0, 1, 3, 4, 5]]\n",
+        "regressor_OLS = sm.OLS(endog = y,exog = X_opt).fit()\n",
+        "regressor_OLS.summary()\n",
+        "X_opt = X[:, [0, 3, 4, 5]]\n",
+        "regressor_OLS = sm.OLS(endog = y,exog = X_opt).fit()\n",
+        "regressor_OLS.summary()\n",
+        "X_opt = X[:, [0, 3, 5]]\n",
+        "regressor_OLS = sm.OLS(endog = y,exog = X_opt).fit()\n",
+        "regressor_OLS.summary()\n",
+        "X_opt = X[:, [0, 3]]\n",
+        "regressor_OLS = sm.OLS(endog = y,exog = X_opt).fit()\n",
+        "regressor_OLS.summary()\n",
+        "# I am not convinced with this model as the number changes everytime when executed.\n",
+        "# Runtime -> Run All (Ctrl+F9) solving the problem."
+      ],
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<table class=\"simpletable\">\n",
+              "<caption>OLS Regression Results</caption>\n",
+              "<tr>\n",
+              "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th> <td>   0.947</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.945</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   849.8</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Date:</th>             <td>Thu, 05 Dec 2019</td> <th>  Prob (F-statistic):</th> <td>3.50e-32</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Time:</th>                 <td>09:25:26</td>     <th>  Log-Likelihood:    </th> <td> -527.44</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>No. Observations:</th>      <td>    50</td>      <th>  AIC:               </th> <td>   1059.</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Df Residuals:</th>          <td>    48</td>      <th>  BIC:               </th> <td>   1063.</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>     <td> </td>   \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+              "</tr>\n",
+              "</table>\n",
+              "<table class=\"simpletable\">\n",
+              "<tr>\n",
+              "    <td></td>       <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>const</th> <td> 4.903e+04</td> <td> 2537.897</td> <td>   19.320</td> <td> 0.000</td> <td> 4.39e+04</td> <td> 5.41e+04</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>x1</th>    <td>    0.8543</td> <td>    0.029</td> <td>   29.151</td> <td> 0.000</td> <td>    0.795</td> <td>    0.913</td>\n",
+              "</tr>\n",
+              "</table>\n",
+              "<table class=\"simpletable\">\n",
+              "<tr>\n",
+              "  <th>Omnibus:</th>       <td>13.727</td> <th>  Durbin-Watson:     </th> <td>   1.116</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Prob(Omnibus):</th> <td> 0.001</td> <th>  Jarque-Bera (JB):  </th> <td>  18.536</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Skew:</th>          <td>-0.911</td> <th>  Prob(JB):          </th> <td>9.44e-05</td>\n",
+              "</tr>\n",
+              "<tr>\n",
+              "  <th>Kurtosis:</th>      <td> 5.361</td> <th>  Cond. No.          </th> <td>1.65e+05</td>\n",
+              "</tr>\n",
+              "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 1.65e+05. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
+            ],
+            "text/plain": [
+              "<class 'statsmodels.iolib.summary.Summary'>\n",
+              "\"\"\"\n",
+              "                            OLS Regression Results                            \n",
+              "==============================================================================\n",
+              "Dep. Variable:                      y   R-squared:                       0.947\n",
+              "Model:                            OLS   Adj. R-squared:                  0.945\n",
+              "Method:                 Least Squares   F-statistic:                     849.8\n",
+              "Date:                Thu, 05 Dec 2019   Prob (F-statistic):           3.50e-32\n",
+              "Time:                        09:25:26   Log-Likelihood:                -527.44\n",
+              "No. Observations:                  50   AIC:                             1059.\n",
+              "Df Residuals:                      48   BIC:                             1063.\n",
+              "Df Model:                           1                                         \n",
+              "Covariance Type:            nonrobust                                         \n",
+              "==============================================================================\n",
+              "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+              "------------------------------------------------------------------------------\n",
+              "const       4.903e+04   2537.897     19.320      0.000    4.39e+04    5.41e+04\n",
+              "x1             0.8543      0.029     29.151      0.000       0.795       0.913\n",
+              "==============================================================================\n",
+              "Omnibus:                       13.727   Durbin-Watson:                   1.116\n",
+              "Prob(Omnibus):                  0.001   Jarque-Bera (JB):               18.536\n",
+              "Skew:                          -0.911   Prob(JB):                     9.44e-05\n",
+              "Kurtosis:                       5.361   Cond. No.                     1.65e+05\n",
+              "==============================================================================\n",
+              "\n",
+              "Warnings:\n",
+              "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+              "[2] The condition number is large, 1.65e+05. This might indicate that there are\n",
+              "strong multicollinearity or other numerical problems.\n",
+              "\"\"\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 132
+        }
+      ]
     }
   ]
 }
