--- a/03_Multiple_Linear_Regression.ipynb
+++ b/03_Multiple_Linear_Regression.ipynb
@@ -131,7 +131,7 @@
         "X = onehotencoder.fit_transform(X).toarray()\n",
         "#print(X)"
       ],
-      "execution_count": 127,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,11 +192,11 @@
       "metadata": {
         "id": "RAZJ4NYaEK7c",
         "colab_type": "code",
+        "outputId": "40138b41-fc84-45f3-cb17-f209770d6d33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "40138b41-fc84-45f3-cb17-f209770d6d33"
+        }
       },
       "source": [
         "#Fitting Multiple Linear Regression to the Training Sset\n",
@@ -204,7 +204,7 @@
         "regressor = LinearRegression()\n",
         "regressor.fit(X_train,y_train)"
       ],
-      "execution_count": 130,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -261,11 +261,11 @@
       "metadata": {
         "id": "2v0u5217J6yU",
         "colab_type": "code",
+        "outputId": "57370ed0-d177-4476-eb4f-54cc3dac6ef8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 478
-        },
-        "outputId": "57370ed0-d177-4476-eb4f-54cc3dac6ef8"
+        }
       },
       "source": [
         "#Building the optimal code using Backward Elimination\n",
@@ -287,9 +287,9 @@
         "regressor_OLS = sm.OLS(endog = y,exog = X_opt).fit()\n",
         "regressor_OLS.summary()\n",
         "# I am not convinced with this model as the number changes everytime when executed.\n",
-        "# Runtime -> Run All (Ctrl+F9) solving the problem."
+        "# Runtime -> Run All (Ctrl+F9) each time to solve the above problem."
       ],
-      "execution_count": 132,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
