--- a/04_LogisticRegression.ipynb
+++ b/04_LogisticRegression.ipynb
@@ -24,6 +24,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "urBltCPSHWQ8",
+        "colab_type": "text"
+      },
+      "source": [
+        "#**Regression**\n",
+        "\n",
+        "##**Intuition**\n",
+        "\n",
+        "[Logistic Regression](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Img004_LR_LogisticRegression.PNG)\n",
+        "\n",
+        "[Predicted Logistic Regression](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Img004_LR_Predicted.PNG)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "QspnsX5OxVWX",
@@ -44,11 +60,11 @@
       "metadata": {
         "id": "Q4TQeZcbyEfN",
         "colab_type": "code",
+        "outputId": "9982042f-60a5-4f0e-d430-fecf809325ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        },
-        "outputId": "9982042f-60a5-4f0e-d430-fecf809325ca"
+        }
       },
       "source": [
         "#Import the dataset\n",
@@ -57,7 +73,7 @@
         "y = dataset.iloc[:,4].values\n",
         "print(dataset)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
