--- a/M2 Part 1 Data Processing/01_DataPreprocessingTemplate_FinalVersion.ipynb
+++ b/M2 Part 1 Data Processing/01_DataPreprocessingTemplate_FinalVersion.ipynb
@@ -1,114 +1,114 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/Zurezh/MachineLearning_A-Z/blob/master/01_DataPreprocessingTemplate_FinalVersion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "01_DataPreprocessingTemplate_FinalVersion.ipynb",
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.3"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "pNXXUi-dr4fq"
-   },
-   "source": [
-    "#**Data Processing**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "aUy9J-GAg7al"
-   },
-   "outputs": [],
-   "source": [
-    "# Importing the Libraries\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "V8vYXIMfiWrF"
-   },
-   "outputs": [],
-   "source": [
-    "#Import the dataset\n",
-    "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/MachineLearning_A-Z/master/DataSets/Data.csv')\n",
-    "X = dataset.iloc[:,:-1].values\n",
-    "y = dataset.iloc[:,3].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "68K_fWI5odvs"
-   },
-   "outputs": [],
-   "source": [
-    "#Spliting the dataset into the Training Set and Test Set\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "sLm_lbMZplok"
-   },
-   "outputs": [],
-   "source": [
-    "#Feature Scaling\n",
-    "#from sklearn.preprocessing import StandardScaler\n",
-    "#sc_X = StandardScaler()\n",
-    "#X_train = sc_X.fit_transform(X_train)\n",
-    "#X_test = sc_X.transform(X_test)\"\"\""
-   ]
-  }
- ],
- "metadata": {
-  "colab": {
-   "include_colab_link": true,
-   "name": "01_DataPreprocessingTemplate_FinalVersion.ipynb",
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/M2%20Part%201%20Data%20Processing/01_DataPreprocessingTemplate_FinalVersion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "pNXXUi-dr4fq"
+      },
+      "source": [
+        "#**Data Processing**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "aUy9J-GAg7al",
+        "colab": {}
+      },
+      "source": [
+        "# Importing the Libraries\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "V8vYXIMfiWrF",
+        "colab": {}
+      },
+      "source": [
+        "#Import the dataset\n",
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/M99%20DataSets/Data.csv?token=AD5CQDF54OAZGHHNXS4E7US6CBZ4A')\n",
+        "X = dataset.iloc[:,:-1].values\n",
+        "y = dataset.iloc[:,3].values"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "68K_fWI5odvs",
+        "colab": {}
+      },
+      "source": [
+        "#Spliting the dataset into the Training Set and Test Set\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state = 0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "sLm_lbMZplok",
+        "colab": {}
+      },
+      "source": [
+        "#Feature Scaling\n",
+        "#from sklearn.preprocessing import StandardScaler\n",
+        "#sc_X = StandardScaler()\n",
+        "#X_train = sc_X.fit_transform(X_train)\n",
+        "#X_test = sc_X.transform(X_test)\"\"\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
 }
