--- a/M2 Part 1 Data Processing/01_DataPreprocessingTemplate.ipynb
+++ b/M2 Part 1 Data Processing/01_DataPreprocessingTemplate.ipynb
@@ -1,162 +1,159 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/Zurezh/MachineLearning_A-Z/blob/master/01_DataPreprocessingTemplate.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "aUy9J-GAg7al"
-   },
-   "outputs": [],
-   "source": [
-    "# Importing the Libraries\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "V8vYXIMfiWrF"
-   },
-   "outputs": [],
-   "source": [
-    "#Import the dataset\n",
-    "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/MachineLearning_A-Z/master/DataSets/Data.csv')\n",
-    "X = dataset.iloc[:,:-1].values\n",
-    "y = dataset.iloc[:,3].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "yzMksmIwi18t"
-   },
-   "outputs": [],
-   "source": [
-    "#Taking care of missing data\n",
-    "#from sklearn.preprocessing import Imputer\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "imputer = SimpleImputer(missing_values = np.nan,strategy = \"mean\")\n",
-    "imputer = imputer.fit(X[:,1:3])\n",
-    "X[:,1:3] = imputer.transform(X[:,1:3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "FrDu0hT-loPO"
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sureshmanem/anaconda3/anaconda3/lib/python3.7/site-packages/sklearn/preprocessing/_encoders.py:415: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
-      "If you want the future behaviour and silence this warning, you can specify \"categories='auto'\".\n",
-      "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
-      "  warnings.warn(msg, FutureWarning)\n",
-      "/Users/sureshmanem/anaconda3/anaconda3/lib/python3.7/site-packages/sklearn/preprocessing/_encoders.py:451: DeprecationWarning: The 'categorical_features' keyword is deprecated in version 0.20 and will be removed in 0.22. You can use the ColumnTransformer instead.\n",
-      "  \"use the ColumnTransformer instead.\", DeprecationWarning)\n"
-     ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "01_DataPreprocessingTemplate.ipynb",
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.3"
     }
-   ],
-   "source": [
-    "#Encoding Categorical data\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
-    "labelencoder_X = LabelEncoder()\n",
-    "X[:,0] = labelencoder_X.fit_transform(X[:,0])\n",
-    "onehotencoder = OneHotEncoder(categorical_features = [0])\n",
-    "X = onehotencoder.fit_transform(X).toarray()\n",
-    "labelencoder_y = LabelEncoder()\n",
-    "y = labelencoder_y.fit_transform(y)"
-   ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "68K_fWI5odvs"
-   },
-   "outputs": [],
-   "source": [
-    "#Spliting the dataset into the Training Set and Test Set\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "sLm_lbMZplok"
-   },
-   "outputs": [],
-   "source": [
-    "#Feature Scaling\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "sc_X = StandardScaler()\n",
-    "X_train = sc_X.fit_transform(X_train)\n",
-    "X_test = sc_X.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "colab": {
-   "include_colab_link": true,
-   "name": "01_DataPreprocessingTemplate.ipynb",
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/M2%20Part%201%20Data%20Processing/01_DataPreprocessingTemplate.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "aUy9J-GAg7al",
+        "colab": {}
+      },
+      "source": [
+        "# Importing the Libraries\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "V8vYXIMfiWrF",
+        "colab": {}
+      },
+      "source": [
+        "#Import the dataset\n",
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/M99%20DataSets/Data.csv')\n",
+        "X = dataset.iloc[:,:-1].values\n",
+        "y = dataset.iloc[:,3].values"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "yzMksmIwi18t",
+        "colab": {}
+      },
+      "source": [
+        "#Taking care of missing data\n",
+        "#from sklearn.preprocessing import Imputer\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "imputer = SimpleImputer(missing_values = np.nan,strategy = \"mean\")\n",
+        "imputer = imputer.fit(X[:,1:3])\n",
+        "X[:,1:3] = imputer.transform(X[:,1:3])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "FrDu0hT-loPO",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "fc839721-a4ee-45db-df76-86c8353f8edc"
+      },
+      "source": [
+        "#Encoding Categorical data\n",
+        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+        "labelencoder_X = LabelEncoder()\n",
+        "X[:,0] = labelencoder_X.fit_transform(X[:,0])\n",
+        "onehotencoder = OneHotEncoder(categorical_features = [0])\n",
+        "X = onehotencoder.fit_transform(X).toarray()\n",
+        "labelencoder_y = LabelEncoder()\n",
+        "y = labelencoder_y.fit_transform(y)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/preprocessing/_encoders.py:415: FutureWarning: The handling of integer data will change in version 0.22. Currently, the categories are determined based on the range [0, max(values)], while in the future they will be determined based on the unique values.\n",
+            "If you want the future behaviour and silence this warning, you can specify \"categories='auto'\".\n",
+            "In case you used a LabelEncoder before this OneHotEncoder to convert the categories to integers, then you can now use the OneHotEncoder directly.\n",
+            "  warnings.warn(msg, FutureWarning)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/preprocessing/_encoders.py:451: DeprecationWarning: The 'categorical_features' keyword is deprecated in version 0.20 and will be removed in 0.22. You can use the ColumnTransformer instead.\n",
+            "  \"use the ColumnTransformer instead.\", DeprecationWarning)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "68K_fWI5odvs",
+        "colab": {}
+      },
+      "source": [
+        "#Spliting the dataset into the Training Set and Test Set\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state = 0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "sLm_lbMZplok",
+        "colab": {}
+      },
+      "source": [
+        "#Feature Scaling\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "sc_X = StandardScaler()\n",
+        "X_train = sc_X.fit_transform(X_train)\n",
+        "X_test = sc_X.transform(X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
 }
