--- a/M3 Part 2 Regression/M4 Simple Linear Regression/02_Simple_Linear_Regression.ipynb
+++ b/M3 Part 2 Regression/M4 Simple Linear Regression/02_Simple_Linear_Regression.ipynb
@@ -190,7 +190,7 @@
         "#print(y_train)\n",
         "\n"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,9 +258,9 @@
         "plt.title('Salary vs Experience (Training Set)')\n",
         "plt.xlabel('Years of Experience')\n",
         "plt.ylabel('Salary')\n",
-        "plt.show"
+        "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +308,7 @@
         "plt.ylabel('Salary')\n",
         "plt.show"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
