--- a/M3 Part 2 Regression/M8 Decision Tree Regression/DecisionTreeRegression.ipynb
+++ b/M3 Part 2 Regression/M8 Decision Tree Regression/DecisionTreeRegression.ipynb
@@ -36,6 +36,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "1FIlmUEkCfvh",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### Step 0: Intuition"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "OgGTtF3X7mOq",
         "colab_type": "text"
       },
