--- a/M3 Part 2 Regression/M8 Decision Tree Regression/DecisionTreeRegression.ipynb
+++ b/M3 Part 2 Regression/M8 Decision Tree Regression/DecisionTreeRegression.ipynb
@@ -40,7 +40,16 @@
         "colab_type": "text"
       },
       "source": [
-        "#### Step 0: Intuition"
+        "### **Step 0: Intuition**\n",
+        "\n",
+        "![Decision Tree Intuition 01](https://github.com/Zurezh/ML_Model/blob/master/M3%20Part%202%20Regression/M8%20Decision%20Tree%20Regression/Images/01_DT_Intuition.png)\n",
+        "\n",
+        "![Decision Tree Intuition 02](https://github.com/Zurezh/ML_Model/blob/master/M3%20Part%202%20Regression/M8%20Decision%20Tree%20Regression/Images/02_DT_Intuition.png)\n",
+        "\n",
+        "![Decision Tree Intuition 03](https://github.com/Zurezh/ML_Model/blob/master/M3%20Part%202%20Regression/M8%20Decision%20Tree%20Regression/Images/03_DT_Intuition.png)\n",
+        "\n",
+        "![Decision Tree Intuition 04](https://github.com/Zurezh/ML_Model/blob/master/M3%20Part%202%20Regression/M8%20Decision%20Tree%20Regression/Images/04_DT_Intuition.png)\n",
+        "\n"
       ]
     },
     {
