--- a/Part 01 Data Processing/Colab/01_DataPreprocessingTemplate.ipynb
+++ b/Part 01 Data Processing/Colab/01_DataPreprocessingTemplate.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/M2%20Part%201%20Data%20Processing/01_DataPreprocessingTemplate.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/Part%2001%20Data%20Processing/Colab/01_DataPreprocessingTemplate.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -61,7 +61,7 @@
       },
       "source": [
         "#Import the dataset\n",
-        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/M99%20DataSets/Data.csv')\n",
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/Part%2001%20Data%20Processing/Dataset/Data.csv')\n",
         "X = dataset.iloc[:,:-1].values\n",
         "y = dataset.iloc[:,3].values"
       ],
@@ -91,11 +91,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "FrDu0hT-loPO",
+        "outputId": "f5e88773-0ee5-46e8-ca1f-8bfe0b1c22c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
-        },
-        "outputId": "fc839721-a4ee-45db-df76-86c8353f8edc"
+        }
       },
       "source": [
         "#Encoding Categorical data\n",
