--- a/Part 01 Data Processing/Colab/01_DataPreprocessingTemplate_FinalVersion.ipynb
+++ b/Part 01 Data Processing/Colab/01_DataPreprocessingTemplate_FinalVersion.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/M2%20Part%201%20Data%20Processing/01_DataPreprocessingTemplate_FinalVersion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/Part%2001%20Data%20Processing/Colab/01_DataPreprocessingTemplate_FinalVersion.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -71,7 +71,7 @@
       },
       "source": [
         "#Import the dataset\n",
-        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/M99%20DataSets/Data.csv?token=AD5CQDF54OAZGHHNXS4E7US6CBZ4A')\n",
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/Part%2001%20Data%20Processing/Dataset/Data.csv')\n",
         "X = dataset.iloc[:,:-1].values\n",
         "y = dataset.iloc[:,3].values"
       ],
