--- a/Part 02 Regression/Section 1 Simple Linear Regression/02_Simple_Linear_Regression.ipynb
+++ b/Part 02 Regression/Section 1 Simple Linear Regression/02_Simple_Linear_Regression.ipynb
@@ -33,23 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/M3%20Part%202%20Regression/M4%20Simple%20Linear%20Regression/02_Simple_Linear_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "iMHPOn3D2I_J"
-      },
-      "source": [
-        "#**Regressions**\n",
-        "\n",
-        "[01 Simple Linear Regression](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/01_SimpleLinearRegression.PNG)\n",
-        "\n",
-        "[02 Simple Linear Regression Graph and Equation](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/02_SLR_Graphs_Equation.PNG)\n",
-        "\n",
-        "[03 Ordinary Least Square](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/03_OrdinaryLeastSquares.PNG)"
+        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/Part%2002%20Regression/Section%201%20Simple%20Linear%20Regression/02_Simple_Linear_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -97,7 +81,7 @@
       },
       "source": [
         "#Import the dataset\n",
-        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/M99%20DataSets/Salary_Data.csv')\n",
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/Part%2002%20Regression/Section%201%20Simple%20Linear%20Regression/Salary_Data.csv')\n",
         "X = dataset.iloc[:,:-1].values\n",
         "y = dataset.iloc[:,1].values"
       ],
@@ -176,10 +160,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "1dJ3LMrn3bkN",
-        "outputId": "8d0cff8f-1427-4e80-b015-d427d5bf6066",
+        "outputId": "dffc3bca-004d-45c4-ac9d-7a49f7f76a25",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 0
         }
       },
       "source": [
@@ -190,7 +174,7 @@
         "#print(y_train)\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,10 +229,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "QzdXSF-f56aZ",
-        "outputId": "a491a89d-e381-4479-909a-8f22da20dd1b",
+        "outputId": "30a2b970-043a-4e98-f132-028b47e4402d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 312
+          "height": 295
         }
       },
       "source": [
@@ -260,20 +244,8 @@
         "plt.ylabel('Salary')\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<function matplotlib.pyplot.show>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -293,7 +265,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "bmuGvSPb6hHu",
-        "outputId": "bef44087-e148-41dc-daad-f43e1e319734",
+        "outputId": "d84fedbd-b032-49ea-a8fd-52260ea9311c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 312
@@ -308,7 +280,7 @@
         "plt.ylabel('Salary')\n",
         "plt.show"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
