--- a/Part 02 Regression/Section 2 Mutiple Linear Regression/03_Multiple_Linear_Regression.ipynb
+++ b/Part 02 Regression/Section 2 Mutiple Linear Regression/03_Multiple_Linear_Regression.ipynb
@@ -33,40 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/M3%20Part%202%20Regression/M5%20Mutiple%20Linear%20Regression/03_Multiple_Linear_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "Q6rOBO5q95gu"
-      },
-      "source": [
-        "#**Regressions**\n",
-        "\n",
-        "##**Intuition**\n",
-        "\n",
-        "[Multiple Linear Regression](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/04_MutipleLinearRegression.PNG)\n",
-        "\n",
-        "[A Caveat](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/05_Caveat.PNG)\n",
-        "\n",
-        "[Dummy Variables](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/06_DummyVariables.PNG)\n",
-        "\n",
-        "[Dummy Variables Trap](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/07_DummyVariablesTrap.PNG)\n",
-        "\n",
-        "##**Building a Model**\n",
-        "[5 Methods of Building Models](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/08_BuildingAModel.PNG)\n",
-        "\n",
-        "[01 All-In](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/09_AllIn.PNG)\n",
-        "\n",
-        "[02 Backward Elimination](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/10_BackwardElimination.PNG)\n",
-        "\n",
-        "[03 Forward Selection](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/11_ForwardSelection.PNG)\n",
-        "\n",
-        "[04 Bidirectional Elimination](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/12_BiDirectional.PNG)\n",
-        "\n",
-        "[05 All Possible Models](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/13_AllPossibleModels.PNG)"
+        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/Part%2002%20Regression/Section%202%20Mutiple%20Linear%20Regression/03_Multiple_Linear_Regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -114,7 +81,7 @@
       },
       "source": [
         "#Import the dataset\n",
-        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/M99%20DataSets/50_Startups.csv')\n",
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/Part%2002%20Regression/Section%202%20Mutiple%20Linear%20Regression/50_Startups.csv')\n",
         "X = dataset.iloc[:,:-1].values\n",
         "y = dataset.iloc[:,4].values\n",
         "#print(X)\n",
@@ -128,7 +95,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "aBMif7CaDGeK",
-        "outputId": "bd85cd4a-f8be-427a-e868-599a35669e46",
+        "outputId": "ff904381-28d1-4875-bd7b-21e39e12512b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
@@ -205,7 +172,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "RAZJ4NYaEK7c",
-        "outputId": "8024924a-85e9-4917-dfbb-6390feae41bc",
+        "outputId": "980ffcbc-2bc5-4190-97ad-626b40b996a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -264,9 +231,7 @@
         "id": "C1RE5lUPKlO6"
       },
       "source": [
-        "###**Step 4: Optimal Model using Backward Elimination**\n",
-        "\n",
-        "[Backward Elimination](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/10_BackwardElimination.PNG)"
+        "###**Step 4: Optimal Model using Backward Elimination**"
       ]
     },
     {
@@ -274,7 +239,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "2v0u5217J6yU",
-        "outputId": "e9524f51-2f3b-439a-b1e7-3be3e8fad12b",
+        "outputId": "155f43c2-e12e-4996-9662-e78b7ab7645d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 486
@@ -320,10 +285,10 @@
               "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   849.8</td>\n",
               "</tr>\n",
               "<tr>\n",
-              "  <th>Date:</th>             <td>Sat, 04 Jan 2020</td> <th>  Prob (F-statistic):</th> <td>3.50e-32</td>\n",
+              "  <th>Date:</th>             <td>Mon, 06 Jan 2020</td> <th>  Prob (F-statistic):</th> <td>3.50e-32</td>\n",
               "</tr>\n",
               "<tr>\n",
-              "  <th>Time:</th>                 <td>11:30:37</td>     <th>  Log-Likelihood:    </th> <td> -527.44</td>\n",
+              "  <th>Time:</th>                 <td>19:31:50</td>     <th>  Log-Likelihood:    </th> <td> -527.44</td>\n",
               "</tr>\n",
               "<tr>\n",
               "  <th>No. Observations:</th>      <td>    50</td>      <th>  AIC:               </th> <td>   1059.</td>\n",
@@ -372,8 +337,8 @@
               "Dep. Variable:                      y   R-squared:                       0.947\n",
               "Model:                            OLS   Adj. R-squared:                  0.945\n",
               "Method:                 Least Squares   F-statistic:                     849.8\n",
-              "Date:                Sat, 04 Jan 2020   Prob (F-statistic):           3.50e-32\n",
-              "Time:                        11:30:37   Log-Likelihood:                -527.44\n",
+              "Date:                Mon, 06 Jan 2020   Prob (F-statistic):           3.50e-32\n",
+              "Time:                        19:31:50   Log-Likelihood:                -527.44\n",
               "No. Observations:                  50   AIC:                             1059.\n",
               "Df Residuals:                      48   BIC:                             1063.\n",
               "Df Model:                           1                                         \n",
