--- a/Part 02 Regression/Section 5 Decision Tree Regression/DecisionTreeRegression.ipynb
+++ b/Part 02 Regression/Section 5 Decision Tree Regression/DecisionTreeRegression.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/M3%20Part%202%20Regression/M8%20Decision%20Tree%20Regression/DecisionTreeRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/Part%2002%20Regression/Section%205%20Decision%20Tree%20Regression/DecisionTreeRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -30,26 +30,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Decision Tree Regression"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1FIlmUEkCfvh",
-        "colab_type": "text"
-      },
-      "source": [
-        "### **Step 0: Intuition**\n",
-        "\n",
-        "![Decision Tree Intuition 01](https://github.com/Zurezh/ML_Model/blob/master/M3%20Part%202%20Regression/M8%20Decision%20Tree%20Regression/Images/01_DT_Intuition.png)\n",
-        "\n",
-        "![Decision Tree Intuition 02](https://github.com/Zurezh/ML_Model/blob/master/M3%20Part%202%20Regression/M8%20Decision%20Tree%20Regression/Images/02_DT_Intuition.png)\n",
-        "\n",
-        "![Decision Tree Intuition 03](https://github.com/Zurezh/ML_Model/blob/master/M3%20Part%202%20Regression/M8%20Decision%20Tree%20Regression/Images/03_DT_Intuition.png)\n",
-        "\n",
-        "![Decision Tree Intuition 04](https://github.com/Zurezh/ML_Model/blob/master/M3%20Part%202%20Regression/M8%20Decision%20Tree%20Regression/Images/04_DT_Intuition.png)\n",
-        "\n"
+        "# **Decision Tree Regression**"
       ]
     },
     {
@@ -87,7 +68,7 @@
       },
       "source": [
         "#Import the dataset\n",
-        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/M3%20Part%202%20Regression/M8%20Decision%20Tree%20Regression/Position_Salaries.csv')\n",
+        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/Part%2002%20Regression/Section%205%20Decision%20Tree%20Regression/Position_Salaries.csv')\n",
         "X = dataset.iloc[:,1:2].values\n",
         "y = dataset.iloc[:,2].values"
       ],
@@ -154,10 +135,10 @@
       "metadata": {
         "id": "8nPrRE6y8cYC",
         "colab_type": "code",
-        "outputId": "5f7a96a6-9bb8-46a7-8bd5-b4821294897d",
+        "outputId": "8542d701-2607-4a07-bf49-38e753ac7426",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 124
+          "height": 104
         }
       },
       "source": [
@@ -165,7 +146,7 @@
         "regressor = DecisionTreeRegressor(random_state=0)\n",
         "regressor.fit(X,y)"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +162,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 5
         }
       ]
     },
@@ -200,7 +181,7 @@
       "metadata": {
         "id": "EdKEvIsI79dF",
         "colab_type": "code",
-        "outputId": "2c3cbb20-5bec-4537-92f0-d98298cb43d4",
+        "outputId": "df35452d-a009-465d-9c79-a9bd02caef04",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 382
@@ -210,7 +191,7 @@
         "y_pred = regressor.predict(6.5)\n",
         "#print(y_pred)"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "error",
@@ -219,7 +200,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-29-6f7c94bc6823>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregressor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#print(y_pred)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-6-6f7c94bc6823>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mregressor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#print(y_pred)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/tree/tree.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X, check_input)\u001b[0m\n\u001b[1;32m    428\u001b[0m         \"\"\"\n\u001b[1;32m    429\u001b[0m         \u001b[0mcheck_is_fitted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'tree_'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 430\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_X_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcheck_input\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    431\u001b[0m         \u001b[0mproba\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtree_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    432\u001b[0m         \u001b[0mn_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/tree/tree.py\u001b[0m in \u001b[0;36m_validate_X_predict\u001b[0;34m(self, X, check_input)\u001b[0m\n\u001b[1;32m    389\u001b[0m         \u001b[0;34m\"\"\"Validate X whenever one tries to predict, apply, predict_proba\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    390\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheck_input\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 391\u001b[0;31m             \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"csr\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    392\u001b[0m             if issparse(X) and (X.indices.dtype != np.intc or\n\u001b[1;32m    393\u001b[0m                                 X.indptr.dtype != np.intc):\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    512\u001b[0m                     \u001b[0;34m\"Reshape your data either using array.reshape(-1, 1) if \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    513\u001b[0m                     \u001b[0;34m\"your data has a single feature or array.reshape(1, -1) \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 514\u001b[0;31m                     \"if it contains a single sample.\".format(array))\n\u001b[0m\u001b[1;32m    515\u001b[0m             \u001b[0;31m# If input is 1D raise error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    516\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -243,7 +224,7 @@
       "metadata": {
         "id": "yiWFcwk68a2g",
         "colab_type": "code",
-        "outputId": "b2cf5a12-17e3-4bb7-d14f-1197b777f379",
+        "outputId": "04bac117-7ad6-4305-faf4-052edb2fe67b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -260,7 +241,7 @@
         "plt.ylabel('Salary')\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
