--- a/Part 02 Regression/Section 4 Support Vector/SVR.ipynb
+++ b/Part 02 Regression/Section 4 Support Vector/SVR.ipynb
@@ -1,1 +1,104 @@
-
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "SVR.ipynb",
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/Part%2002%20Regression/Section%204%20Support%20Vector/SVR.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jO5uAhziZFNe",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Importing the libraries\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EHfgapysZNHz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Importing the dataset\n",
+        "dataset = pd.read_csv('Data.csv')\n",
+        "X = dataset.iloc[:, :-1].values\n",
+        "y = dataset.iloc[:, 3].values"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YEyIAFiwZUD2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Splitting the dataset into the Training set and Test set\n",
+        "from sklearn.cross_validation import train_test_split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zNuCwOuuZWX3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Feature Scaling\n",
+        "\"\"\"from sklearn.preprocessing import StandardScaler\n",
+        "sc_X = StandardScaler()\n",
+        "X_train = sc_X.fit_transform(X_train)\n",
+        "X_test = sc_X.transform(X_test)\"\"\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1Mtexpt_ZZHz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
+}
