--- a/Part 02 Regression/Section 1 Simple Linear Regression/02_Simple_Linear_Regression.ipynb
+++ b/Part 02 Regression/Section 1 Simple Linear Regression/02_Simple_Linear_Regression.ipynb
@@ -128,7 +128,7 @@
         "#from sklearn.preprocessing import StandardScaler\n",
         "#sc_X = StandardScaler()\n",
         "#X_train = sc_X.fit_transform(X_train)\n",
-        "#X_test = sc_X.transform(X_test)\"\"\""
+        "#X_test = sc_X.transform(X_test)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -160,10 +160,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "1dJ3LMrn3bkN",
-        "outputId": "dffc3bca-004d-45c4-ac9d-7a49f7f76a25",
+        "outputId": "4163c9c2-0f41-4827-8933-ec948459b29a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 54
         }
       },
       "source": [
@@ -171,8 +171,7 @@
         "regressor = LinearRegression()\n",
         "regressor.fit(X_train,y_train)\n",
         "#print(X_train)\n",
-        "#print(y_train)\n",
-        "\n"
+        "#print(y_train)"
       ],
       "execution_count": 5,
       "outputs": [
@@ -229,7 +228,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "QzdXSF-f56aZ",
-        "outputId": "30a2b970-043a-4e98-f132-028b47e4402d",
+        "outputId": "99ae182b-1743-42b8-edc2-91e1b7709ead",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -265,10 +264,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "bmuGvSPb6hHu",
-        "outputId": "d84fedbd-b032-49ea-a8fd-52260ea9311c",
+        "outputId": "362665c4-98a5-4add-b53a-c4a9328f36aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 312
+          "height": 295
         }
       },
       "source": [
@@ -278,22 +277,10 @@
         "plt.title('Salary vs Experience (Test Set)')\n",
         "plt.xlabel('Years of Experience')\n",
         "plt.ylabel('Salary')\n",
-        "plt.show"
+        "plt.show()"
       ],
       "execution_count": 8,
       "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<function matplotlib.pyplot.show>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -306,6 +293,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IbA1GsiwfMXV",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### End of File"
       ]
     }
   ]
