--- a/Part 03 Classification/Section 1 Logistic Regression/04_LogisticRegression.ipynb
+++ b/Part 03 Classification/Section 1 Logistic Regression/04_LogisticRegression.ipynb
@@ -33,23 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Zurezh/ML_Model/blob/master/M11%20Part%203%20Classification/M12%20Logistic%20Regression/04_LogisticRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "urBltCPSHWQ8"
-      },
-      "source": [
-        "#**Regression**\n",
-        "\n",
-        "##**Intuition**\n",
-        "\n",
-        "[Logistic Regression](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/Img004_LR_LogisticRegression.PNG)\n",
-        "\n",
-        "[Predicted Logistic Regression](https://github.com/Zurezh/MachineLearning_A-Z/blob/master/Images/Img004_LR_Predicted.PNG)"
+        "<a href=\"https://colab.research.google.com/github/Zurezh/MachineLearningModels/blob/master/Part%2003%20Classification/Section%201%20Logistic%20Regression/04_LogisticRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -97,7 +81,7 @@
       },
       "source": [
         "#Import the dataset\n",
-        "dataset = pd.read_csv('https://raw.githubusercontent.com/Zurezh/ML_Model/master/M99%20DataSets/Social_Network_Ads.csv')\n",
+        "dataset = pd.read_csv('https://github.com/Zurezh/MachineLearningModels/raw/master/Part%2003%20Classification/Section%201%20Logistic%20Regression/Social_Network_Ads.csv')\n",
         "X = dataset.iloc[:,[2,3]].values\n",
         "y = dataset.iloc[:,4].values\n",
         "#print(dataset)"
@@ -152,10 +136,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "P2pkzrz-Iu-_",
-        "outputId": "8d400639-3278-43f3-8686-4922df121f43",
+        "outputId": "5c067d05-e2bc-41a4-84ad-678bf42539b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 159
+          "height": 156
         }
       },
       "source": [
@@ -164,7 +148,7 @@
         "classifier = LogisticRegression(random_state=0)\n",
         "classifier.fit(X_train,y_train)"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +172,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -256,10 +240,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "7h0oKgvAJECF",
-        "outputId": "ec997c20-59ed-4e4e-8e47-f2eb853141f4",
+        "outputId": "38734209-f2fa-4d9f-f757-ff3d301ed967",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 350
+          "height": 349
         }
       },
       "source": [
@@ -281,7 +265,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,10 +294,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "OZxmQixWJGRk",
-        "outputId": "0b67fe78-c7e1-4428-ebd7-9be60e6daadd",
+        "outputId": "b953fc3f-6645-4dc0-ed84-157e1e4cdc04",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 350
+          "height": 349
         }
       },
       "source": [
@@ -335,7 +319,7 @@
         "plt.legend()\n",
         "plt.show()\n"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
