Advanced Chatbot Projects

--- a/OpenAI/OpenAI.ipynb
+++ b/OpenAI/OpenAI.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = OpenAI(api_token=\"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\")\n",
+    "llm = OpenAI(api_token=\"Your API Token\") # MyTestKey\n",
     "pandas_ai = PandasAI(llm, conversational=False)"
    ]
   },
